# ibkr-execution

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_setup.py  main.py  runtime.py
app/api/: __init__.py  http_server.py  routes.py  schemas.py  strategy_list_ui.html  web_ui.html  workspace_ui.html  ws_models.py
app/broker/: __init__.py  contracts.py  ibapi_gateway.py  ibkr_client.py  ibkr_events.py  order_builders.py  rate_limiter.py  reconnect.py
app/cli/: __init__.py  main.py
app/data/: __init__.py  calendar.py  market_data.py  market_data_service.py  opening_range.py
app/domain/: __init__.py  dsl_models.py  enums.py  errors.py  models.py
app/dsl/: __init__.py  compiler.py  engine.py  parser.py  validators.py
app/execution/: __init__.py  orb_runner.py  order_manager.py  reconciliation.py  strategy_runtime.py  watchdog.py
app/persistence/: __init__.py  db.py  repositories.py
app/replay/: __init__.py  replay_runner.py
app/replay/datasets/: orb_sample.csv  orb_strategy.yaml
app/risk/: __init__.py  limits.py  sizing.py  validation.py
app/tests/: __init__.py
app/tests/golden/: test_placeholder.py  test_replay_orb_golden.py
app/tests/unit/: test_api_routes.py  test_calendar.py  test_contracts_failsafe.py  test_db_repositories.py  test_dsl_engine.py  test_dsl_parser_validation.py  test_ibapi_gateway.py  test_ibkr_connector_smoke.py  test_market_data.py  test_market_data_service.py  test_memory_logger.py  test_opening_range.py  (+7 more)
deploy/systemd/: ibkr-exec-bot.service
